tests/error/comptime_expr_errors/tket_not_installed.err
Error: Tket not installed (at $FILE:11:0)
   | 
 9 | 
10 | 
11 | guppy_circ = guppy.load_pytket("guppy_circ", circ, use_arrays=False)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Experimental pytket compatibility requires `tket` to be
   |                                                                      installed

Help: Install tket: `pip install tket`

Guppy compilation failed due to 1 previous error
